Allow lambdas to be used with the DbQueryManager for more concise usage of the most common scenarios. Updated HelloDatabase example.